--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.59
-loader_version=0.11.6
+minecraft_version=21w42a
+yarn_mappings=21w42a+build.4
+loader_version=0.12.3
 # Mod Properties
 mod_version=0.5.1
 maven_group=amerebagatelle.github.io
 archives_base_name=fabricskyboxes
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.40.1+1.17
+fabric_version=0.41.1+1.18
 # Optimization mods
 lithium_file=3107909
 phosphor_file=3141950
